syntax = "proto3";

// TODO: add protobuf package, file name, rename all protobuf
option csharp_namespace = "AElf";

message Address
{
    bytes Value = 1;
}

message Hash
{
    bytes Value = 1;
}

// TODO: check other types
message SInt32Value
{
    sint32 Value = 1;
}

message SInt64Value
{
    sint64 Value = 1;
}
